--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>FirstProj</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/fading.css">
+  <link rel="stylesheet" href="css/slider.css">
   <!-- <script src="js/slider.js" charset="utf-8"></script> -->
 </head>
 
@@ -26,32 +28,30 @@
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
       <img src="image/slider/slider_1.jpg" style="width:100%">
-      <div class="text">Caption Text</div>
+      <!--<div class="text">Caption Text</div>-->
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
       <img src="image/slider/slider_1.jpg" style="width:100%">
-      <div class="text">Caption Two</div>
+      <!--<div class="text">Caption Two</div>-->
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
       <img src="image/slider/slider_1.jpg" style="width:100%">
-      <div class="text">Caption Three</div>
+      <!--<div class="text">Caption Three</div>-->
     </div>
 
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-
-
+    <br>
   <div style="text-align:center">
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
   </div>
 
   <div class="body">
@@ -98,10 +98,10 @@
 
 
   </div>
-  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js">
-  </script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
   <script src="js/slider.js" charset="utf-8"></script>
   <script src="js/masonry.js" charset="utf-8"></script>
+
 </body>
 
 </html>
